--- a/static/index.html
+++ b/static/index.html
@@ -16,6 +16,11 @@
 </head>
 <body>
 	<p id='hello'>!!!</p>
+	<form action="http://localhost:8888/?key=one&value=two" method="post">
+		<input type="text" name="user" />
+		<input type="text" name="pwd" />
+		<input type="submit" value="submit" />
+	</form>
 </body>
 
 </html>
