--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-	
 	<meta charset="UTF-8">
 	<title>ZZ</title>
 	<script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
@@ -11,16 +10,56 @@
 				alert('hello world hide');
 				$(this).hide();
 			});
+			
+			$('#div0').css({"border": "2px solid red", "width": "80%", "height": "80%", "margin": "auto"})
+			
+			//$('#div1').width(800)
+			//$('#div1').height(600)
+			//$('#div1').css({"border": "2px solid green", "margin": "auto"})
+			$('#div1').addClass("div1")
+			
+			
+			$("button").click(function(){
+				$.post("/?key=one&value=two",
+				{
+					name:"菜鸟教程",
+					url:"http://www.runoob.com"
+				},
+				function(data,status){
+					alert("数据: \n" + data + "\n状态: " + status);
+				});
+			});
+
 		});
 	</script>
 </head>
+<style>
+html, body {
+	width: 100%;
+	height: 100%;
+	background: black;
+}
+
+.div1 {
+	border: 2px solid red;
+	width: 80%;
+	height: 80%;
+	margin: auto;
+}
+
+</style>
 <body>
-	<p id='hello'>!!!</p>
-	<form action="http://localhost:8888/?key=one&value=two" method="post">
-		<input type="text" name="user" />
-		<input type="text" name="pwd" />
-		<input type="submit" value="submit" />
-	</form>
+	
+	<div id='div1'>
+		<p id='hello'>!!!</p>
+		<form action="http://localhost:8888/?key=one&value=two" method="post">
+			<input type="text" name="user" />
+			<input type="text" name="pwd" />
+			<input type="submit" value="submit" />
+		</form>
+		<button>SUBMIT</button>
+	</div>
+
 </body>
 
 </html>
