--- a/static/index.html
+++ b/static/index.html
@@ -26,7 +26,7 @@
 					url:"http://www.runoob.com"
 				},
 				function(data,status){
-					alert("数据: \n" + data + "\n状态: " + status);
+					alert("数据: \n" + data["name"] + "\n状态: " + status);
 				});
 			});
 
